Bug 623852. gfxContext::PushGroupAndCopyBackground should not try to copy the background if the underlying surface cannot be used as a source. r=mstange,a=blocking